test.application/target/classes/META-INF/fabric8/openshift/higlobe-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=test.application&var-version=1.0.0-SNAPSHOT
  labels:
    app: test.application
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.tibco.bw
  name: higlobe
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: test.application
    provider: fabric8
    group: com.tibco.bw
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=test.application&var-version=1.0.0-SNAPSHOT
      labels:
        container: higlobe
        project: higlobe
        app: test.application
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.tibco.bw
      name: higlobe
      namespace: default
    spec:
      containers:
      - image: harbor.gb-poc.pks.berzuk.com/globepoc/higlobe
        imagePullPolicy: Always
        name: higlobe
        ports:
        - containerPort: 8080
          name: http
  triggers:
  - type: ConfigChange
